--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h2>To log in please visit localhost:8080/loadform</h2>
-    <p th.text="${myvar}"></p>
+    <p th:text="${myvar}"></p>
 </body>
 </html>
